Style and HTML structure updates

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <header>
       <p class="emphasis">
-        Learning
+        <span class="topic">Learning</span>
       </p>
       <time>
         Published 21 Dec 2023
@@ -27,7 +27,7 @@
     </header>
     
     <section>
-      <h1>HTML & CSS foundations</h1>
+      <h1 class="title"><a href="#">HTML & CSS foundations</a></h1>
 
       <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
     </section>
