Updates to styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
   <link rel="stylesheet" href="./styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">  
   
   <title>Frontend Mentor | Blog preview card</title>
 
@@ -18,7 +21,7 @@
     </figure>
 
     <header>
-      <p class="emphasis">
+      <p>
         <span class="topic">Learning</span>
       </p>
       <time>
@@ -29,11 +32,11 @@
     <section>
       <h1 class="title"><a href="#">HTML & CSS foundations</a></h1>
 
-      <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+      <p class="summary">These languages are the backbone of every website, defining structure, content, and presentation.</p>
     </section>
     
     <footer>
-      <p class="emphasis">
+      <p>
         <img src="./assets/images/image-avatar.webp"> Greg Hooper
       </p>
     </footer>
