--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
     <footer>
       <p>
-        <img src="./assets/images/image-avatar.webp"> Greg Hooper
+        <img class="profile-pic" src="./assets/images/image-avatar.webp"> <span class="name">Greg Hooper</span>
       </p>
     </footer>
     
