Styling updated and refined.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
   <article class="blog-card">
 
-    <figure>
-      <img src="./assets/images/illustration-article.svg" alt="" class="main-image">
+    <figure class="main-image">
+      <img src="./assets/images/illustration-article.svg" alt="" >
     </figure>
 
     <header>
@@ -29,10 +29,10 @@
       </time>
     </header>
     
-    <section>
+    <section class="summary-content">
       <h1 class="title"><a href="#">HTML & CSS foundations</a></h1>
 
-      <p class="summary">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+      <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
     </section>
     
     <footer>
